refactor: CourseMapper, CourseResponse