@@ -5,54 +5,59 @@ import com.tuan.course_management.dto.response.CourseResponse;
 import com.tuan.course_management.dto.response.LessonResponse;
 import com.tuan.course_management.entity.Course;
 import com.tuan.course_management.entity.Lesson;
+import lombok.experimental.UtilityClass;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
- * Mapper chuyển đổi giữa entity Course và các DTO liên quan.
+ * Class tiện ích chuyển đổi giữa Entity Course và các DTO phản hồi liên quan.
  */
+@UtilityClass
 public class CourseMapper {
 
     /**
-     * Chuyển Course entity sang CourseResponse (không kèm bài học).
+     * Chuyển Course entity sang CourseResponse DTO cơ bản.
      */
     public static CourseResponse toResponse(Course course) {
-        if (course == null) return null;
+        if (course == null) {
+            return null;
+        }
 
         return CourseResponse.builder()
                 .id(course.getId())
                 .title(course.getTitle())
                 .description(course.getDescription())
-                .teacher_id(course.getTeacher() != null ? course.getTeacher().getId() : null)
+                .teacherId(course.getTeacher() != null ? course.getTeacher().getId() : null)
                 .teacherName(course.getTeacher() != null ? course.getTeacher().getFullName() : null)
                 .status(course.getStatus())
-                .createAt(course.getCreatedAt())
-                .updateAt(course.getUpdatedAt())
+                .createdAt(course.getCreatedAt())
+                .updatedAt(course.getUpdatedAt())
                 .build();
     }
 
     /**
-     * Chuyển Course entity sang CourseDetailResponse (kèm danh sách bài học đã publish).
+     * Chuyển Course entity sang CourseDetailResponse DTO kèm danh sách bài học đã xuất bản.
      */
-    public static CourseDetailResponse toDetailResponse(Course course, List<Lesson> publishedLesson) {
-        if (course == null) return null;
+    public static CourseDetailResponse toDetailResponse(Course course, List<Lesson> publishedLessons) {
+        if (course == null) {
+            return null;
+        }
 
-        List<LessonResponse> lessonResponses = publishedLesson != null
-                ? publishedLesson.stream()
+        List<LessonResponse> lessonResponses = publishedLessons != null
+                ? publishedLessons.stream()
                   .map(LessonMapper::toResponse)
-                  .collect(Collectors.toList())
+                  .toList()
                 : List.of();
 
         return CourseDetailResponse.builder()
                 .id(course.getId())
                 .title(course.getTitle())
                 .description(course.getDescription())
-                .teacher_id(course.getTeacher() != null ? course.getTeacher().getId() : null)
+                .teacherId(course.getTeacher() != null ? course.getTeacher().getId() : null)
                 .teacherName(course.getTeacher() != null ? course.getTeacher().getFullName() : null)
                 .status(course.getStatus())
-                .createAt(course.getCreatedAt())
-                .updateAt(course.getUpdatedAt())
+                .createdAt(course.getCreatedAt())
+                .updatedAt(course.getUpdatedAt())
                 .lessons(lessonResponses)
                 .build();
     }
